tests/reference/asr-test_float_semantic_error-58c0c90.stderr
semantic error: float type is not supported yet. 
 --> tests/errors/test_float_semantic_error.py:4:9
  |
4 |     pi: float = 3.14
  |         ^^^^^ Hint: Use f32 or f64 for now. 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
